pull this to make it pretty :)

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -29,3 +29,24 @@
 //
 // Example:
 // @linkColor: #ff0000;
+
+.container {
+  width: 100% ; 
+}
+
+.navbar{
+  padding-top:20px;
+}
+
+.navbar-inner{
+	background-image:-webkit-linear-gradient(top, #ffffff, rgb(216, 150, 11))
+}
+
+.brand a:hover{
+	background-color:none;
+}
+.span9{
+  width: 90%;
+  padding: 2%;
+}
+
