--- a/app/assets/stylesheets/scaffolds.css.less
+++ b/app/assets/stylesheets/scaffolds.css.less
@@ -1,6 +1,13 @@
+page {
+  background-color: black;
+}
 body {
   background-color: #fff;
   color: #333;
+  margin-top: 10px;
+  margin-left: 15%;
+  margin-right: 15%;
+  border: 4px outset gray;  
 }
 body,
 p,
@@ -60,3 +67,4 @@ div.actions {
   font-size: 12px;
   list-style: square;
 }
+
