--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,21 @@
-<h1>Welcome to Startups2Students</h1>
-	<p>This site is currently under construction. Please visit <a href = "http://csuac.com/tagged/s2s">CSUAC.com</a> </p>	
-	<table border = 1>
+<h3>Welcome to Startups2Students</h3>
+	<strong><h3>This site is currently under construction. Please visit <a href = "http://csuac.com/tagged/s2s">CSUAC.com</a> </h3></strong>	
+	<h4>Available Positions</h4>
+	<%- model_class = Job -%>
+	<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:type) %></th>
+      <th><%= model_class.human_attribute_name(:description) %></th>
+      <th><%= model_class.human_attribute_name(:user_id) %></th>
+      <th><%= model_class.human_attribute_name(:contact) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
     <% @jobs.each do |job| %>
-	  <tr>
-	  	<td>Job ID</td>
-	  	<td>Job Name</td>
-	  	<td>Job Type</td>
-	  </tr>   
       <tr>
         <td><%= link_to job.id, job_path(job) %></td>
         <td><%= job.name %></td>
@@ -14,9 +23,17 @@
         <td><%= job.description %></td>
         <td><%= job.user_id %></td>
         <td><%= job.contact %></td>
-        <td><%=l job.created_at %></td>
-    
-       </tr>
-     </table>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_job_path(job), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      job_path(job),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
-     <% end %>
