fixing database.yaml merge conflict

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,9 @@
   </div>
 </div>
 <div class ="container">
+  <% flash.each do |key, value| %>
+    <%= content_tag(:div, value, class: "alert alert-#{key}") %>
+  <% end %>
 	<div class="row">
 		<div class="span9"><%= yield %></div>
 	</div>	
