small sign up pages changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,8 @@
               <li><%= link_to  "Edit jobs", "#" %></li>
               <li><%= link_to  "Sign out", signout_path, method: "delete" %></li>
             <% else %>
-              <li><%= link_to  "Sign in", signin_path %></li>
-              <li><%= link_to  "Sign up", new_user_path %></li>
+              <li><%= link_to  "Employer Sign in", signin_path %></li>
+              <li><%= link_to  "Employer Sign up", new_user_path %></li>
             <% end %>
         </ul>
         <!-- .nav, .navbar-search, .navbar-form, etc -->
