--- a/app/assets/stylesheets/users.css.less
+++ b/app/assets/stylesheets/users.css.less
@@ -1,3 +1,7 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Less here: http://lesscss.org/
+
+.span6 h3 {
+	padding:5px;
+}
