added logo and css tweakos

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -39,7 +39,7 @@
 }
 
 .navbar-inner{
-	background-image:-webkit-linear-gradient(top, #ffffff, rgb(216, 150, 11))
+	background-image:-webkit-linear-gradient(top, #ffffff, rgb(216, 150, 11));
 }
 
 .brand a:hover{
@@ -49,5 +49,16 @@
   width: 90%;
   padding: 2%;
 }
+
+.brand{
+	float:left;
+}
+
+.nav{
+	padding-top: 30px;
+	font-size: 130%;
+	color: black;
+}
+
 
 
