--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   <meta name="viewport" content ="width=device-width, initial-scale=1.0">
 </head>
 <body>
+<div class = "header_image">
+
 <div class="navbar">
   <div class="navbar-inner">
     <div class="container">
@@ -23,7 +25,7 @@
       </a>
  
       <!-- Be sure to leave the brand out there if you want it shown -->
-      <a class="brand" href="/">Startups2Students</a>
+      <a class="brand" href="/"> <img src="assets/S2S_Final.png" alt="Startups2Students" width="140" height="100"/></a>
  
       <!-- Everything you want hidden at 940px or less, place within here -->
       <div class="nav-collapse collapse">
