--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,8 +14,9 @@
 
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation %>
-
+      <div class = "offset0">
       <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+    </div>
     <% end %>
   </div>
 </div>
