added images, page title, and background css

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -40,6 +40,7 @@
 
 .navbar-inner{
 	background-image:-webkit-linear-gradient(top, #ffffff, rgb(216, 150, 11));
+	border: 2px outset;
 }
 
 .brand a:hover{
