--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -30,25 +30,25 @@
 // Example:
 // @linkColor: #ff0000;
 
+
+
 .container {
-  width: 100% ; 
+  max-width:960px;
 }
 
 .navbar{
-  padding-top:20px;
 }
 
 .navbar-inner{
 	background-image:-webkit-linear-gradient(top, #ffffff, rgb(216, 150, 11));
 	border: 2px outset;
+
 }
 
 .brand a:hover{
 	background-color:none;
 }
 .span9{
-  width: 90%;
-  padding: 2%;
 }
 
 .brand{
@@ -56,9 +56,9 @@
 }
 
 .nav{
-	padding-top: 30px;
 	font-size: 130%;
 	color: black;
+	padding-top: 25px;
 }
 
 
