changed menu color

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -28,9 +28,8 @@
 // See http://twitter.github.com/bootstrap/customize.html#variables for their names and documentation
 //
 // Example:
-// @linkColor: #ff0000;
-
-
+@navbarLinkColor: black;
+@navbarLinkColorHover: gray;
 
 .container {
   max-width:960px;
