--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,13 +1,12 @@
 <div class="row">
   <div class="span6 offset3">
-    <h3>Sign up</h3>
     <%= form_for(@job) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
       <%= f.label :name %>
       <%= f.text_field :name %>
 
-      <%= f.label :type %>
-      <%= f.text_field :type %>
+      <%= f.label :job_type %>
+      <%= f.text_field :job_type %>
 
       <%= f.label :contact %>
       <%= f.text_field :contact %>
