--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -5,21 +5,22 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th>Job Name</th>
       <th><%= model_class.human_attribute_name(:description) %></th>
       <th><%= model_class.human_attribute_name(:contact) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th>Description</th>
+      <th>Created</th>
+      <th>Modify</th>
     </tr>
   </thead>
   <tbody>
     <% @jobs.each do |job| %>
       <tr>
         <td><%= link_to job.name, job_path(job) %></td>
-        <td><%= job.type %></td>
+        <td><%= job.job_type %></td>
         <td><%= job.description %></td>
-        <td><%= job.user_id %></td>
         <td><%= job.contact %></td>
-        <td><%=l job.created_at %></td>
+        <td><%= time_ago_in_words(job.created_at) %> ago</td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_job_path(job), :class => 'btn btn-mini' %>
