--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,4 +2,4 @@
 <div class="page-header">
   <h1>Edit your company profile</h1>
 </div>
-<%= render :partial => 'form' %>
+<%= render 'form', button_text: "Save my changes" %>
