--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,14 +1,14 @@
 <%- model_class = Job -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+  <h1>Your Jobs</h1>
 </div>
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>Job Name</th>
-      <th><%= model_class.human_attribute_name(:description) %></th>
-      <th><%= model_class.human_attribute_name(:contact) %></th>
+      <th>Job Title</th>
+      <th>Job Type</th>
       <th>Description</th>
+      <th>Contact Email</th>
       <th>Created</th>
       <th>Modify</th>
     </tr>
