--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,21 +1,12 @@
-<%- model_class = Job -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+<div>
+  <h3><%= @job.name %></h3>
+  <div class= "well">
+    <h4>Location: <%= @job.location %></h4>
+    <h4>Description:<br> <br> <%= @job.description %></h4>
+  </div>
 </div>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @job.name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:job_type) %>:</strong></dt>
-  <dd><%= @job.job_type %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
-  <dd><%= @job.description %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
-  <dd><%= @job.user_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:contact) %>:</strong></dt>
-  <dd><%= @job.contact %></dd>
-</dl>
-
+<% if signed_in? && owned_by_user?(current_user, @job) %>
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
               jobs_path, :class => 'btn'  %>
@@ -24,6 +15,7 @@
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
               job_path(@job),
               :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure you want to delete this job ?')) },
               :class => 'btn btn-danger' %>
 </div>
+<% end %>
