Adding location to user/new

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -8,6 +8,9 @@
       <%= f.label :email %>
       <%= f.text_field :email %>
 
+      <%= f.label :location %>
+      <%= f.text_field :location  %>
+
       <%= f.label :password %>
       <%= f.password_field :password %>
 
