--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -28,28 +28,31 @@
 // See http://twitter.github.com/bootstrap/customize.html#variables for their names and documentation
 //
 // Example:
-@navbarLinkColor: black;
-@navbarLinkColorHover: gray;
+@navbarLinkColor: @grayLight;
+@navbarLinkColorHover: white;
+@navbarBackground: @grayDark;
+@navbarBackgroundHighlight: @grayDarker;
+@tableBackgroundHover: @grayLight;
 
-.container {
-  max-width:960px;
+.navbar .container{
+	max-width:960px;
 }
 
-.navbar{
-}
 
 .navbar-inner{
-	background-image:-webkit-linear-gradient(top, #ffffff, rgb(216, 150, 11));
+	-webkit-border-radius:0;
+	border-radius:0;
+	moz-border-radius:0;
+	border:none;
 }
 
 .brand a:hover{
 	background-color:none;
 }
-.span9{
-}
 
-.brand{
+a.brand{
 	float:left;
+	padding:0;
 }
 
 .nav{
@@ -58,5 +61,16 @@
 	padding-top: 25px;
 }
 
+.navbar .nav > li > a {
+	text-shadow:none;
+}
 
+.footer{
+	border-top: 5px solid black;
+	background-color: @grayDarker;
+	min-height:150px;
+}
 
+.btn-primary{
+	margin-left:70px;
+}
