--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,20 @@
  *= require bootstrap_and_overrides
  *= require_tree
  */
+
+
+th .arrow {
+  padding-right: 12px;
+
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+
+th .asc {
+  background-image: url(/assets/arrow_up.png);
+  width: 10%;
+  height: 10%;
+}
+th .desc {
+  background-image: url(/assets/arrow_down.png);
+}
