--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<% if !signed_in?	%>
+ <% if !signed_in?	%>
   <div class="row">
     <div class="span5">
       <h2>Welcome to the end <br> of your job search</h2>
@@ -17,15 +17,22 @@
     <% end %>
   <h4>Available Positions</h4>
   <%- model_class = Job -%>
-  <table class="table table-striped">
+  <table class="table table-striped ">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:type) %></th>
-      <th><%= model_class.human_attribute_name(:description) %></th>
-      <th><%= model_class.human_attribute_name(:company) %></th>
-      <th><%= model_class.human_attribute_name(:location) %></th>
-      <th><%= model_class.human_attribute_name(:contact) %>/Apply</th>
+      <!-- <th><%= sortable model_class.human_attribute_name(:name) %></th>
+      <th><%= sortable model_class.human_attribute_name(:type) %></th>
+      <th><%= sortable model_class.human_attribute_name(:description) %></th>
+      <th><%= sortable model_class.human_attribute_name(:company) %></th>
+      <th><%= sortable model_class.human_attribute_name(:location) %></th>
+      <th><%= sortable model_class.human_attribute_name(:contact) %></th> -->
+
+      <th><%= sortable 'name'%></th>
+      <th><%= sortable 'job_type', 'Type' %></th>
+      <th><%= sortable 'description' %></th>
+      <th><%= sortable 'company' %></th>
+      <th><%= sortable 'location' %></th>
+      <th><%= sortable 'contact', 'Contact/Apply' %></th>
     </tr>
   </thead>
   <tbody>
