fixed arrow from showing up on every column simultaneously, description and contact are no longer filterable

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -29,10 +29,10 @@
 
       <th><%= sortable 'name'%></th>
       <th><%= sortable 'job_type', 'Type' %></th>
-      <th><%= sortable 'description' %></th>
       <th><%= sortable 'company' %></th>
       <th><%= sortable 'location' %></th>
-      <th><%= sortable 'contact', 'Contact/Apply' %></th>
+      <th>Description</th>  
+      <th>Contact/Apply</th>
     </tr>
   </thead>
   <tbody>
