--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -68,9 +68,14 @@ a.brand{
 .footer{
 	border-top: 5px solid black;
 	background-color: @grayDarker;
-	min-height:150px;
+	min-height:50px;
 }
 
 .splash-button {
 	margin-left:70px;
+}
+
+.navbar .nav{
+	float: right;
+	margin-right: 60px;
 }
