footer done and gold added

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -28,7 +28,7 @@
 // See http://twitter.github.com/bootstrap/customize.html#variables for their names and documentation
 //
 // Example:
-@navbarLinkColor: @grayLight;
+@navbarLinkColor: #e4c627;
 @navbarLinkColorHover: white;
 @navbarBackground: @grayDark;
 @navbarBackgroundHighlight: @grayDarker;
@@ -65,7 +65,7 @@ a.brand{
 	text-shadow:none;
 }
 
-.footer{
+footer{
 	border-top: 5px solid black;
 	background-color: @grayDarker;
 	min-height:50px;
@@ -78,4 +78,13 @@ a.brand{
 .navbar .nav{
 	float: right;
 	margin-right: 60px;
+}
+
+.bottom-text{
+	color:white;
+	padding:20px;
+}
+
+.bottom-text a{
+	color:#e4c627;
 }
