--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,9 +24,16 @@
     <div class="span1"></div>
   </div>
 </div>
-  <div class="row">
-    <div class="footer">
-      </div>
-    </div>
+    <footer>
+      <div class="row">
+        <div class="span6"></div>
+          <div class="span4">
+            <div class="bottom-text">
+            <div class="lead">Made proudly by <br> <a href="http://www.csuac.com">CSUAC</a> and <a href="http://www.aecuboulder.com">AECU</a></div>
+            </div>
+          </div>
+          <div class="span4"></div>
+         </div> 
+
 </body>
 </html>
