changed table header to gold fotn black bg, using new bootstrap arrow icons, arrow now working

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -74,3 +74,25 @@ a.brand{
 .splash-button {
 	margin-left:70px;
 }
+
+th a{
+	color: #e4c627;
+}
+
+thead{
+	background-color: black;
+}
+
+th .arrow {
+  padding-right: 12px;
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+
+th .asc {
+  background-image: url(/assets/arrow_up.png);
+  
+}
+th .desc {
+  background-image: url(/assets/arrow_down.png);
+}
