--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -36,11 +36,10 @@
   </thead>
   <tbody>
     <% @jobs.each do |job| %>
-      <tr onmouseover="this.style.cursor='pointer';"
-        onclick="location.href='<%=job_url(job)%>';" style="cursor: pointer;">
-        <td><%= job.name %></td>
+     <tr>      <!-- onmouseover="this.style.cursor='pointer';" onclick="location.href='<%=job_url(job)%>';" style="cursor: pointer;" -->
+        <td><%= link_to job.name, job_url(job) %></td>
         <td><%= job.job_type %></td>
-        <td><%= job.company %></td>
+        <td><%= link_to job.company, user_url(job.user_id) %></td>
         <td><%= job.location %></td>
         <td><%= job.contact %></td>
       </tr>
