--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -81,18 +81,5 @@ th a{
 
 thead{
 	background-color: black;
-}
-
-th .arrow {
-  padding-right: 12px;
-  background-repeat: no-repeat;
-  background-position: right center;
-}
-
-th .asc {
-  background-image: url(/assets/arrow_up.png);
-  
-}
-th .desc {
-  background-image: url(/assets/arrow_down.png);
+	color: #e4c627;
 }
