jobs form changes

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -63,6 +63,7 @@ a.brand{
 
 .navbar .nav > li > a {
 	text-shadow:none;
+	float: right;
 }
 
 .footer{
@@ -73,4 +74,8 @@ a.brand{
 
 .splash-button {
 	margin-left:70px;
+}
+
+body{
+	background-image: url('subtle_grunge.png');
 }
