--- a/app/assets/stylesheets/jobs.css.less
+++ b/app/assets/stylesheets/jobs.css.less
@@ -1,3 +1,25 @@
 // Place all the styles related to the Jobs controller here.
 // They will automatically be included in application.css.
 // You can use Less here: http://lesscss.org/
+
+.jobform{
+}
+
+.jobform label {
+  font-weight: bold;
+}
+
+.jobform input, textarea {
+  min-width: 320px;
+}
+
+.jobform select {
+  min-width: 335px;
+}
+
+
+.tips {
+  color: gray;
+  margin-top: -10px;
+  max-width: 320px;
+}
