--- a/app/assets/stylesheets/custom.css.less
+++ b/app/assets/stylesheets/custom.css.less
@@ -53,4 +53,26 @@ div.actions {
   float:left;
 }
 
+/* FORMS //////////////////////////*/
+.customform{
+}
 
+.customform label {
+  font-weight: bold;
+}
+
+.customform input, textarea {
+  min-width: 320px;
+}
+
+.customform select {
+  min-width: 335px;
+}
+
+
+.tips {
+  color: black;
+  margin-bottom: 10px;
+  max-width: 320px;
+  width: 500px;
+}
