--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,6 +1,5 @@
 <%- model_class = Job -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => t('helpers.titles.new', :model => model_class.model_name.human,
-                                 :default => "New #{model_class.model_name.human}") %></h1>
+  <h1>New Job Listing</h1>
 </div>
 <%= render 'form', button_text: "Post Job" %>
