--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -6,7 +6,7 @@
       <%= f.text_field :name %>
 
       <%= f.label :job_type %>
-      <%= f.select :job_type, [['Internship', 'Internship'], ['Full Time', 'Full Time']] %>
+      <%= f.select :job_type, [['Internship', 'Internship'], ['Full Time', 'Full Time'], ['Part Time', 'Part Time']]%>
 
       <%= f.label :location, "Job Location (City, State)" %>
       <%= f.text_field :location, value: current_user.location %>
