--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -11,7 +11,7 @@
       <%= f.text_field :name %>
 
       <%= f.label :job_type %>
-      <%= f.select :job_type, [['Internship', 'Internship'], ['Full Time', 'Full Time']] %>
+      <%= f.select :job_type, [['Internship', 'Internship'], ['Full Time', 'Full Time'], ['Part Time', 'Part Time']]%>
 
       <%= f.label :location, "Job Location (City, State)" %>
       <%= f.text_field :location %>
