updating jobs page

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -2,7 +2,8 @@
   <h3><%= @job.name %></h3>
   <div class= "well">
     <h4>Location: <%= @job.location %></h4>
-    <h4>Description:<br> <br> <%= @job.description %></h4>
+    <h4>Description:<br> <br> <%= @job.description %></h4><br>
+    <h4>To Apply: <%= @job.contact %> </h4>
   </div>
 </div>
 
