added google analytics script

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,5 +35,7 @@
           <div class="span4"></div>
          </div> 
 
+<%= render :partial => ‘layouts/ga’ if RAILS_ENV == ‘production’ %>
+
 </body>
 </html>
