--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,6 @@
           <div class="span4"></div>
          </div> 
 
-<%= render :partial => ‘layouts/ga’ if RAILS_ENV == ‘production’ %>
-
+<%= render :partial => 'layouts/ga' if Rails.env.production? %>
 </body>
 </html>
