--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,7 +5,7 @@
       <div class = "lead">Find internships and entry-level <br> positions at amazing startups</div>
     </div>
     <div class="span5">
-      <img src="/assets/s2s_home.png" alt="Startups2Students"/>
+      <img src="/assets/header.png" alt="Startups2Students"/>
     </div>
   </div>
   <div class="row">
@@ -19,18 +19,11 @@
   <table class="table table-striped ">
   <thead>
     <tr>
-      <!-- <th><%= sortable model_class.human_attribute_name(:name) %></th>
-      <th><%= sortable model_class.human_attribute_name(:type) %></th>
-      <th><%= sortable model_class.human_attribute_name(:description) %></th>
-      <th><%= sortable model_class.human_attribute_name(:company) %></th>
-      <th><%= sortable model_class.human_attribute_name(:location) %></th>
-      <th><%= sortable model_class.human_attribute_name(:contact) %></th> -->
 
       <th><%= sortable 'name'%></th>
       <th><%= sortable 'job_type', 'Type' %></th>
       <th><%= sortable 'company' %></th>
       <th><%= sortable 'location' %></th>
-      <th>Contact/Apply</th>
       <th><%= sortable 'created_at', 'Posted' %></th>
     </tr>
   </thead>
@@ -41,8 +34,7 @@
         <td><%= job.job_type %></td>
         <td><%= link_to job.company, user_url(job.user_id) %></td>
         <td><%= job.location %></td>
-        <td><%= job.contact %></td>
-        <td><%= job.created_at.to_date %></td>
+        <td><%= time_ago_in_words(job.created_at)%> ago</td>
       </tr>
     <% end %>
   </tbody>
