--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -31,7 +31,7 @@
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
         </td>
-        <td><%=job.opening</td>
+        <td><%=job.opening %></td>
       </tr>
     <% end %>
   </tbody>
