fixed users/jobs view to show number of openings

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,8 +8,8 @@
       <th><%= sortable 'name'%></th>
       <th><%= sortable 'job_type', 'Type' %></th>
       <th><%= sortable 'location' %></th>
-      <th><%= sortable 'opening' , 'Number of Openings' %>
       <th>Contact/Apply</th>
+      <th><%= sortable 'opening' , 'Number of Openings' %> </th>
     </tr>
   </thead>
   <tbody>
