--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -4,6 +4,7 @@
     <h4>Location: <%= @job.location %></h4>
     <h4>Description:<br> <br> <%= @job.description %></h4><br>
     <h4>To Apply: <%= @job.contact %> </h4>
+    <h4> Positions Available: <%= @job.opening %> </h4>
   </div>
 </div>
 
