added website to user, views, etc

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -5,6 +5,9 @@
       <%= f.label :company , "Company Name" %>
       <%= f.text_field :company %>
 
+      <%= f.label :website , "Website" %>
+      <%= f.text_field :website %>
+
       <%= f.label :email %>
       <%= f.text_field :email %>
 
