--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,9 @@
 <div class="page-header">
   <h1><%= @user.company %></h1>
   <h2><%= @user.location %></h1>
+  <% if @user.website != nil %>
+    <h3><%= link_to @user.website, url_with_protocol(@user.website), :target => '_blank' %></h3>
+    <% end %>
   <div class="well">
   <table class="table table-striped ">
   <thead>
